--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
-      "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
+        "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
+    },
+    "dependencies": {
+        "materialize-css": "^1.0.0-rc.2"
     }
 }
