--- a/assets/package.json
+++ b/assets/package.json
@@ -4,5 +4,10 @@
     },
     "dependencies": {
         "materialize-css": "^1.0.0-rc.2"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.2",
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.0.22"
     }
 }
